# aui-common

./: README.md  pyproject.toml
src/aui_common/audio/: protocol.py
src/aui_common/input/: provider.py
src/aui_common/runtime/: app_api.py
src/aui_common/speech/: tts.py
src/aui_common/util/: async_utils.py  errors.py
src/auicommon/: __init__.py
src/auicommon/adapter/: base.py  meta.py
src/auicommon/app/: base.py  meta.py
src/auicommon/audio/: convert.py  protocol.py  types.py
src/auicommon/input/: dtmf.py  dtmf_tone.py
src/auicommon/pluginmanager/: registry.py
src/auicommon/runtime/: app_api.py
src/auicommon/tts/: base.py  meta.py
src/auicommon/util/: textnorm.py
tests/: test_smoke.py
