[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aui-common"
version = "0.1.0"
description = "AUI Common: shared types, protocols and utilities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
  { name = "AUI AudioUserInterface" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
